--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,17 @@
+<h1>Teams and Heroes List</h1>
 
+<h2>Team</h2>
 
+<div class="team">
+  <p>Team Name: <%= @team.name %></p>
+  <p>Team Motto: <%= @team.motto %></p>
+</div><br>
 
+<h1>Heroes</h1>
+<% @heroes.each do |hero| %>
+  <div class="hero">
+    <p>Hero's Name: <%= hero.name %></p><br>
+    <p>Hero's Power: <%= hero.power %></p><br>
+    <p>Hero's Biography: <%= hero.biography %></p><br>
+  </div><br>
+<% end %>
