--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -8,7 +8,7 @@
 
     <h1>Create a Team and Heroes!</h1>
 
-    <form action="/team" method="POST">
+    <form action="/teams" method="POST">
       <label for="team_name"> Team Name: </label>
       <input id="team_name" input type="text" name="team[name]"><br>
 
