automatically backed up by learn

--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -23,7 +23,7 @@
       <input id="hero_power_1" input type="text" name="team[heroes][][power]"><br>
 
       <label for="hero_bio_1">Hero's Biography: </label>
-      <input id="hero_bio_1" input type="text" name="pirate[ships][][biography]"><br>
+      <input id="hero_bio_1" input type="text" name="team[heroes][][biography]"><br>
 
       <h2>Hero 2</h2>
       <label for="hero_name_1">Hero's Name: </label>
