--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -27,7 +27,7 @@
 
       <h2>Hero 2</h2>
       <label for="hero_name_1">Hero's Name: </label>
-      <input id="ship_name_1" input type="text" name="team[heroes][][name]"><br>
+      <input id="hero_name_1" input type="text" name="team[heroes][][name]"><br>
 
       <label for="hero_power_1">Hero's Power: </label>
       <input id="hero_power_1" input type="text" name="team[heroes][][power]"><br>
@@ -37,7 +37,7 @@
 
       <h2>Hero 3</h2>
       <label for="hero_name_1">Hero's Name: </label>
-      <input id="ship_name_1" input type="text" name="team[heroes][][name]"><br>
+      <input id="hero_name_1" input type="text" name="team[heroes][][name]"><br>
 
       <label for="hero_power_1">Hero's Power: </label>
       <input id="hero_power_1" input type="text" name="team[heroes][][power]"><br>
