automatically backed up by learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,8 +1,8 @@
 <h1>Teams and Heroes List</h1>
 
 <div class="team">
-  <p>Team Name: <%= team.name %></p>
-  <p>Team Motto: <%= team.motto %></p>
+  <p>Team Name: <%= @team.name %></p>
+  <p>Team Motto: <%= @team.motto %></p>
 </div><br>
 
 <h1>Heroes</h1>
