automatically backed up by learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -8,8 +8,8 @@
 <h1>Heroes</h1>
 <% @heroes.each do |hero| %>
   <div class="hero">
-    <p>Hero's Name: <%= @hero.name %></p><br>
-    <p>Hero's Power: <%= @hero.power %></p><br>
-    <p>Hero's Biography: <%= @hero.biography %></p><br>
+    <p>Hero's Name: <%= hero.name %></p><br>
+    <p>Hero's Power: <%= hero.power %></p><br>
+    <p>Hero's Biography: <%= hero.biography %></p><br>
   </div><br>
 <% end %>
