automatically backed up by learn

--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -43,7 +43,7 @@
       <input id="hero_power_3" input type="text" name="team[heroes][][power]"><br>
 
       <label for="hero_bio_3">Hero's Biography: </label>
-      <input id="hero_bio_3" input type="text" name="pirate[ships][][biography]"><br>
+      <input id="hero_bio_3" input type="text" name="team[heroes][][biography]"><br>
 
       <input type="submit" id="Submit" value="submit">
 
