automatically backed up by learn

--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -33,7 +33,7 @@
       <input id="hero_power_2" input type="text" name="team[heroes][][power]"><br>
 
       <label for="hero_bio_2">Hero's Biography: </label>
-      <input id="hero_bio_2" input type="text" name="pirate[ships][][biography]"><br>
+      <input id="hero_bio_2" input type="text" name="team[heroes][][biography]"><br>
 
       <h2>Hero 3</h2>
       <label for="hero_name_3">Hero's Name: </label>
