automatically backed up by learn

--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -36,14 +36,14 @@
       <input id="member2_bio" input type="text" name="team[heroes][][biography]"><br>
 
       <h2>Hero 3</h2>
-      <label for="hero_name_3">Hero's Name: </label>
-      <input id="hero_name_3" input type="text" name="team[heroes][][name]"><br>
+      <label for="member3_name">Hero's Name: </label>
+      <input id="member3_name" input type="text" name="team[heroes][][name]"><br>
 
-      <label for="hero_power_3">Hero's Power: </label>
-      <input id="hero_power_3" input type="text" name="team[heroes][][power]"><br>
+      <label for="member3_power">Hero's Power: </label>
+      <input id="member3_power" input type="text" name="team[heroes][][power]"><br>
 
-      <label for="hero_bio_3">Hero's Biography: </label>
-      <input id="hero_bio_3" input type="text" name="team[heroes][][biography]"><br>
+      <label for="member3_bio">Hero's Biography: </label>
+      <input id="member3_bio" input type="text" name="team[heroes][][biography]"><br>
 
       <input type="submit" id="Submit" value="submit">
 
