--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -10,6 +10,6 @@
   <div class="hero">
     <p>Hero Name: <%= hero.name %></p><br>
     <p>Hero Power: <%= hero.power %></p><br>
-    <p>Hero Biography: <%= hero.biography %></p>
+    <p>Hero Biography: <%= hero.biography %></p><br>
   </div><br>
 <% end %>
